# lambda-autoclicker

./: .gitignore  package.json  svelte.config.js  vite.config.js
.github/workflows/: build.yml  deploy.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-window.json  migrated.json  picker-window.json
src-tauri/src/: lib.rs  main.rs  settings.rs
src/lib/: Radio.svelte  clicking.svelte.ts  lambda.svelte  settings.svelte.ts
src/lib/types/: settings.ts
src/routes/: +layout.svelte
src/routes/app/(app)/: +layout.svelte  +page.svelte
src/routes/app/picker/: +page.svelte
